# ProductCardBuilder

./: .gitignore  README.md
product-card-builder/: build.gradle.kts  settings.gradle.kts
product-card-builder/src/main/kotlin/com/productcard/builder/: Application.kt
product-card-builder/src/main/kotlin/com/productcard/builder/api/: ProductCardController.kt
product-card-builder/src/main/kotlin/com/productcard/builder/client/: CardServiceGrpcClient.kt  SnippetServiceGrpcClient.kt
product-card-builder/src/main/kotlin/com/productcard/builder/component/: CardComponent.kt  CardComponentConfig.kt  CartButtonComponent.kt  DeliveryComponent.kt  GalleryComponent.kt  PriceComponent.kt  ProductSnippetComponentVisualConfig.kt  RatingComponent.kt  SignalComponent.kt  SnippetComponent.kt  TitleComponent.kt
product-card-builder/src/main/kotlin/com/productcard/builder/factory/: CardRenderConfigFactory.kt  DiscoverySnippetConfigFactory.kt  FallbackConfigProvider.kt
product-card-builder/src/main/kotlin/com/productcard/builder/model/: CardRenderConfig.kt  CardRenderContext.kt  CardThemeType.kt  DiscoverySnippetConfig.kt  DiscoverySnippetConfigContext.kt  ServiceSnippetThemeType.kt
product-card-builder/src/main/kotlin/com/productcard/builder/registry/: CardRenderConfigRegistry.kt  CardRenderFactoriesConfiguration.kt  DiscoverySnippetConfigRegistry.kt  DiscoverySnippetFactoriesConfiguration.kt
product-card-builder/src/main/resources/: application.yml
product-card-service/: CMakeLists.txt  README.md
product-card-service/data/: products.json
product-card-service/src/: main.cpp
product-card-service/src/builders/: base_card_builder.cpp  base_card_builder.h  base_snippet_builder.h  cart_card_builder.cpp  cart_card_builder.h  cart_snippet_builder.h  fallback_builder.cpp  fallback_builder.h  search_card_builder.cpp  search_card_builder.h  search_snippet_builder.h
product-card-service/src/const/: theme_configs.cpp  theme_configs.h
product-card-service/src/data/: product_data.h
product-card-service/src/handler/: get_cards_handler.cpp  get_cards_handler.h  get_snippets_handler.cpp  get_snippets_handler.h
product-card-service/src/section_builders/: cart_button_builder.cpp  cart_button_builder.h  delivery_builder.cpp  delivery_builder.h  gallery_builder.cpp  gallery_builder.h  offer_based_builder.h  price_builder.cpp  price_builder.h  rating_builder.cpp  rating_builder.h  signal_builder.cpp  signal_builder.h  title_builder.cpp  title_builder.h
product-card-service/src/service/: product_card_service.cpp  product_card_service.h
product-card-service/src/utils/: builder_factory.cpp  builder_factory.h  theme_utils.cpp  theme_utils.h
proto/: product_card_service.proto  snippet_service.proto
snippet-service/: CMakeLists.txt
snippet-service/src/builders/: base_snippet_builder.cpp  base_snippet_builder.h  cart_snippet_builder.cpp  fallback_builder.cpp  model_card_builder.cpp  model_card_builder.h  search_snippet_builder.cpp
snippet-service/src/const/: theme_configs.cpp  theme_configs.h
snippet-service/src/data/: product_loader.cpp  product_loader.h
snippet-service/src/section_builders/: cart_button_builder.h  delivery_builder.cpp  gallery_builder.cpp  offer_based_builder.h  price_builder.cpp  price_builder.h  rating_builder.cpp  rating_builder.h  signal_builder.cpp  signal_builder.h  title_builder.cpp  title_builder.h
snippet-service/src/utils/: builder_factory.cpp  builder_factory.h  theme_utils.cpp  theme_utils.h
(+7 files in other folders)
